--- a/ADO.API/appsettings.json
+++ b/ADO.API/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevelopmentDatabase": "Server=localhost;Database=test;User Id=SA;Password=Secret1234;"
+  }
 }
 
